--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "HCNY Mobile App Server Side",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
+		"start": "node src/index.js",
 		"dev": "nodemon src/index.js"	
 	},
 	"author": "Lin Zhao",
