--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"expo-server-sdk": "^3.5.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.9.16",
+		"mongoose": "^5.13.3",
+		"nodemailer": "^6.6.3",
 		"nodemon": "^2.0.4"
 	},
 	"engines": {
